# quantum_data_dashboard

./: .gitignore  DashboardInput.yaml  DashboardInputExample.yaml  README.md  app.py  pyproject.toml
data_map/: SuppMaterial_data-calculations_20250925.xlsx  view.qgz  ~$SuppMaterial_data-calculations_20250925.xlsx
data_map/quantum data center/: quantum_data_center.csv  quantum_data_center.geojson  quantum_raw.txt
data_utils/: GIS_format_converter.py  convert_csv_to_geojson.py  data_from_web_converter.py  get_quan_data.py
io_utils/: display.py  map_style.yaml
src_streamlit/: quantum_data_loader.py
